fixed input type = number being cut off

--- a/css/main.css
+++ b/css/main.css
@@ -26,13 +26,13 @@ input {
 }
 
 input[type="text"] {
-    width: 70%;
+    width: 65%;
     margin-right: 10px;
     padding: 10px;
 }
 
 input[type="number"] {
-    width: 50px;
+    width: 70px;
     text-align: center;
     padding: 10px;
 }
